--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="title_activity_intrinsic_size_demo">IntrinsicSizeDemoActivity</string>
+    <string name="title_activity_coroutine">CoroutineActivity</string>
 </resources>
