--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Application</string>
     <string name="title_activity_intrinsic_size_demo">IntrinsicSizeDemoActivity</string>
     <string name="title_activity_coroutine">CoroutineActivity</string>
+    <string name="title_activity_lazy_list">LazyListActivity</string>
 </resources>
