--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_intrinsic_size_demo">IntrinsicSizeDemoActivity</string>
     <string name="title_activity_coroutine">CoroutineActivity</string>
     <string name="title_activity_lazy_list">LazyListActivity</string>
+    <string name="title_activity_list_demo">ListDemoActivity</string>
 </resources>
