--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_coroutine">CoroutineActivity</string>
     <string name="title_activity_lazy_list">LazyListActivity</string>
     <string name="title_activity_list_demo">ListDemoActivity</string>
+    <string name="title_activity_lazy_list_demo">LazyListDemo</string>
 </resources>
