viewModel을 사용한 간단한 온도 변환 앱 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_list_demo">ListDemoActivity</string>
     <string name="title_activity_lazy_list_demo">LazyListDemo</string>
     <string name="title_activity_introduction_view_model">IntroductionViewModelActivity</string>
+    <string name="title_activity_view_model_demo">ViewModelDemoActivity</string>
 </resources>
