--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_introduction_view_model">IntroductionViewModelActivity</string>
     <string name="title_activity_view_model_demo">ViewModelDemoActivity</string>
     <string name="title_activity_room_demo">RoomDemoActivity</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
